objects/Airport__c/fields/IATA__c.field-meta.xml
<CustomField>
    <fullName>IATA__c</fullName>
    <label>IATA</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>