objects/Airport__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <precision>8</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Number</type>
</CustomField>