objects/Airport__c/validationRules/Latitud_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Latitud_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Latitude__c &gt;90  ||  Latitude__c &lt;-90</errorConditionFormula>
    <errorDisplayField>Latitude__c</errorDisplayField>
    <errorMessage>The valid range for latitude values is from +90 to -90 degrees.</errorMessage>
</ValidationRule>