objects/Airport__c/validationRules/Longitude_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Longitude_Value</fullName>
    <active>true</active>
    <errorConditionFormula>Longitude__c  &gt;180  ||  Longitude__c  &lt; -180</errorConditionFormula>
    <errorDisplayField>Longitude__c</errorDisplayField>
    <errorMessage>The valid range for longitude values is from +180 to -180 degrees.</errorMessage>
</ValidationRule>